--- a/Python first steps, day 4 -- 2022-12Dec-12.ipynb
+++ b/Python first steps, day 4 -- 2022-12Dec-12.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "071f426a",
+   "id": "ebe950f0",
    "metadata": {},
    "source": [
     "# Agenda, day 4: Functions!\n",
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1339d664",
+   "id": "d61694d0",
    "metadata": {},
    "source": [
     "# What are functions?\n",
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c35fceea",
+   "id": "8b379ec7",
    "metadata": {},
    "source": [
     "# To define a new function:\n",
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "91431c4c",
+   "id": "cae8dfa8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "db081af3",
+   "id": "fbe2bac2",
    "metadata": {},
    "source": [
     "# What happens when I define a function?\n",
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f08c0b22",
+   "id": "04bf2b95",
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "226ceeee",
+   "id": "25713cd4",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0581f9a3",
+   "id": "65f71254",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f081a46c",
+   "id": "90c8ed3b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +187,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b6b9721d",
+   "id": "60836b18",
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "8bafb142",
+   "id": "9bd69d34",
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7c604a64",
+   "id": "2a17fe08",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "799289ac",
+   "id": "af4ea791",
    "metadata": {},
    "source": [
     "# Exercise: Calculator\n",
@@ -279,7 +279,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "f93f1a23",
+   "id": "46c58e0a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,7 +311,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b6471309",
+   "id": "9c3cf65e",
    "metadata": {},
    "outputs": [
     {
@@ -332,7 +332,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "f3d59c8d",
+   "id": "62c0ecdc",
    "metadata": {},
    "outputs": [
     {
@@ -352,7 +352,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96f8593e",
+   "id": "c6a0a192",
    "metadata": {},
    "source": [
     "# Arguments and parameters\n",
@@ -367,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "86a77fa1",
+   "id": "82224f14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1273e58a",
+   "id": "421a392a",
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +401,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "cf50b8ec",
+   "id": "d0bcf548",
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "9d507c56",
+   "id": "acca89ff",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "017d045f",
+   "id": "0d23affd",
    "metadata": {},
    "source": [
     "# Recap on simple parameters\n",
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c130f8f1",
+   "id": "56f5d6a2",
    "metadata": {},
    "source": [
     "# Exercise: Rewrite `calc` to use parameters\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d45f0c19",
+   "id": "812e3447",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -496,7 +496,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "a75bef50",
+   "id": "9bc8dd06",
    "metadata": {},
    "outputs": [
     {
@@ -511,13 +511,13 @@
     "# parameters: first, op, second\n",
     "# arguments:   '10', '+', '3'     these are known as \"positional arguments,\" assigned to parameters per position\n",
     "\n",
-    "calc('10', '+', '3')"
+    "calc('10', '+', '3')           "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "87a43257",
+   "id": "6b2f6352",
    "metadata": {},
    "outputs": [
     {
@@ -541,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "d85ca78c",
+   "id": "9582a7e9",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73e5f3fd",
+   "id": "8867aff3",
    "metadata": {},
    "source": [
     "# Next up:\n",
@@ -580,7 +580,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ceddb9db",
+   "id": "787155ea",
    "metadata": {},
    "source": [
     "# Return values\n",
@@ -602,7 +602,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "f41702d1",
+   "id": "1020f4b5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "12d978f8",
+   "id": "069927f5",
    "metadata": {},
    "outputs": [
     {
@@ -639,8 +639,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "ae550428",
+   "execution_count": 26,
+   "id": "fa08f51c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,12 +661,39 @@
     "        else:\n",
     "            result = 'Not supported'\n",
     "            \n",
-    "        return f'{first} {op} {second} = {result}')\n",
+    "        return f'{first} {op} {second} = {result}'    # return a string\n",
     "        \n",
     "    else:\n",
     "        \n",
-    "        print(f'{first} and {second} must both be numeric')"
+    "        return f'{first} and {second} must both be numeric'  # return a string"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "dd96f5cf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10 + 3 = 13\n"
+     ]
+    }
+   ],
+   "source": [
+    "answer = calc('10', '+', '3')   # capture the string returned by cal...\n",
+    "print(answer)                   # ... print that captured string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6dda7b50",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
